--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,14 @@
-<h1>Welcome Page</h1>
-<%= link_to 'My Blog', controller: 'articles' %>
+<% if member_signed_in? %>
 
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h3>you have succesfully signed in</h3>
+<%= link_to "Sign Out", destroy_member_session_path, :method => :delete %>
+
+<% else %>
+
+<h1> Welcome to rails community</h1>
+<%= link_to "Sign In", new_member_session_path, :method => :get %>
+<%= link_to "Sign up", new_member_registration_path, :method => :get %>
+
+<% end %>
+
+<br>
